tests/ui/fail/enum.rs
use substruct::substruct;

#[substruct(B)]
pub enum A {
    X,
    Y,
    Z,
}

fn main() {}
