tests/ui/fail/enum.stderr
error: #[substruct] does not support enums
 --> tests/ui/fail/enum.rs:4:5
  |
4 | pub enum A {
  |     ^^^^
